squashing bugs

--- a/public/assets/css/students.css
+++ b/public/assets/css/students.css
@@ -1,6 +1,6 @@
 .content{
     padding: 10px;
-    display: inline-block;
+    display: flex;
 }
 .student-image{
     width: 180px;
@@ -11,10 +11,10 @@
     font-weight: 300;
 }
 .info{
-    width: 40%;
+    width: 30%;
 }
 .markets{
-    width: 60%;
+    width: 70%;
     padding-left: 30px;
 }
 .first{
